# oilfield-chemical-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: explorer.toml  implementer.toml  reviewer.toml
app/: streamlit_app.py
data/sample/: README.md  sample_troubleshooting_notes.md  sample_water_analysis.csv
db/: README.md
db/migrations/: 0001_oilfield_chemical_copilot_schema.sql
eval/: answer_eval.py  retrieval_eval.py
flows/kestra/: ingest.yml
monitoring/grafana/: README.md
src/oilfield_chemical_copilot/: __init__.py
src/oilfield_chemical_copilot/ingest/: __init__.py  chunking.py  config.py  models.py  scanner.py
src/oilfield_chemical_copilot/ingest/parsers/: __init__.py  base.py  docx.py  pdf.py  spreadsheet.py
src/oilfield_chemical_copilot/observability/: __init__.py  logging.py
src/oilfield_chemical_copilot/retrieval/: __init__.py  hybrid.py
src/oilfield_chemical_copilot/storage/: __init__.py  pgvector.py
src/oilfield_chemical_copilot/tools/: __init__.py  chemical_dosage.py  water_analysis.py
tests/ingest/: test_scaffold.py
