[project]
name = "oilfield-chemical-copilot"
version = "0.1.0"
description = "LLM Zoomcamp 2026 capstone scaffold for an oilfield production-chemistry troubleshooting RAG assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt>=1.6.1",
    "minsearch>=0.0.4",
    "openai>=1.59.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.4",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.41.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
